# stock_notification

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/routes/: test.py  webhook.py
